--- a/iSpanCarSpringboot/src/main/resources/application.properties
+++ b/iSpanCarSpringboot/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.datasource.password=cookie
 #spring.datasource.password=P@ssw0rd
 
 #Spring Data JPA setting
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2008Dialect
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
