--- a/iSpanCarSpringboot/pom.xml
+++ b/iSpanCarSpringboot/pom.xml
@@ -86,6 +86,13 @@
 			<artifactId>javax.servlet.jsp-api</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+
+		<!--jsoup 包处理HTML -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
