--- a/iSpanCarSpringboot/src/main/resources/application.properties
+++ b/iSpanCarSpringboot/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.mvc.view.suffix=.jsp
 
 #SQL Server DataSource Setting
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=car
-spring.datasource.username=sa
-spring.datasource.password=Sql@123456
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=iSpan_car
+spring.datasource.username=cookie
+spring.datasource.password=cookie
 
 #MySQL DataSource Setting
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
