--- a/iSpanCarSpringboot/pom.xml
+++ b/iSpanCarSpringboot/pom.xml
@@ -90,6 +90,12 @@
 			<artifactId>spring-boot-starter-json</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		<!--jsoup 包处理HTML -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.3</version>
+		</dependency>
 
 	</dependencies>
 
