--- a/iSpanCarSpringboot/src/main/resources/application.properties
+++ b/iSpanCarSpringboot/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.datasource.password=P@ssw0rd
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 
