--- a/iSpanCarSpringboot/src/main/resources/application.properties
+++ b/iSpanCarSpringboot/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.mvc.view.suffix=.jsp
 #SQL Server DataSource Setting
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=iSpan_car
-spring.datasource.username=watcher
-spring.datasource.password=P@ssw0rd
+spring.datasource.username=sa
+spring.datasource.password=werop76524
 
 #MySQL DataSource Setting
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -33,4 +33,7 @@ spring.mvc.static-path-pattern=/**
 
 #context path setting
 #server.servlet.context-path=/wonderland
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=1000MB
 
