--- a/iSpanCarSpringboot/pom.xml
+++ b/iSpanCarSpringboot/pom.xml
@@ -90,6 +90,17 @@
 			<artifactId>spring-boot-starter-json</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		
+		<dependency>
+		   <groupId>org.springframework.boot</groupId>
+		   <artifactId>spring-boot-starter-mail</artifactId>
+	    </dependency>
+	    
+	    <dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>javax.mail-api</artifactId>
+		    <version>1.6.2</version>
+		</dependency>
 		<!--jsoup 包处理HTML -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
