--- a/iSpanCarSpringboot/src/main/resources/application.properties
+++ b/iSpanCarSpringboot/src/main/resources/application.properties
@@ -38,6 +38,15 @@ spring.servlet.multipart.max-request-size=1000MB
 
 spring.http.converters.preferred-json-mapper=jackson
 
+#mail
+spring.mail.host=smtp.gmail.com
+spring.mail.username=ericz1451450@gmail.com
+spring.mail.password=lkkbhyxlqrpvzvri
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 #context path setting
 #server.servlet.context-path=/wonderland
 
