--- a/iSpanCarSpringboot/src/main/resources/application.properties
+++ b/iSpanCarSpringboot/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-
+server.tomcat.uri-encoding=utf-8
 #Spring Security default setting
 spring.security.user.name=user
 spring.security.user.password=123456
